--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Training",
   "main": "index.js",
   "engine": {
     "node": "8.1.1",
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
+  "author": "EO",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3"
