--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Training",
+  "description": "Training project",
+  "author": "",
+  "license": "ISC",
   "main": "index.js",
-  "engine": {
+  "engines": {
     "node": "8.1.1",
     "npm": "5.0.3"
   },
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "EO",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.15.3"
   },
-  "devDependencies": {}
+  "scripts": {
+    "start": "node index.js"
+  }
 }
