--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "npm": "5.0.3"
   },
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0"
   },
   "scripts": {
     "start": "node index.js"
